tests/expectations/compiler/slice/slice_with_variables.out
Error [ETYC0372176]: Cannot determine the length of the slice. Slice bounds must be compile-time constants.
    --> compiler-test:8:16
     |
   8 |         return a[START..END];
     |                ^^^^^^^^^^^^^
     |
     = Use literal values or const expressions for slice bounds.
